--- a/Teach/Teaching/Teaching/Web.config
+++ b/Teach/Teaching/Teaching/Web.config
@@ -20,18 +20,9 @@
     </system.web>
   </location>
   <system.web>
+    <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-
-    <authentication mode="Forms">
-      <forms loginUrl="~/Login.aspx" defaultUrl="~/" timeout="20" protection="All"></forms>
-    </authentication>
-
-    <authorization>
-      <deny users="?"/>
-      <allow users="*"/>
-    </authorization>
-
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
@@ -77,9 +68,6 @@
       </providers>
     </sessionState>
   </system.web>
-  <appSettings>
-    <add key="SessionTimeout" value="1000"/>
-  </appSettings>
   <system.webServer>
     <modules>
       <remove name="FormsAuthenticationModule" />
