--- a/Teaching/bin/Teaching.dll.config
+++ b/Teaching/bin/Teaching.dll.config
@@ -20,9 +20,15 @@
     </system.web>
   </location>
   <system.web>
-    <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/login.aspx" protection="All" timeout="20" defaultUrl="~/" />
+    </authentication>
+    <authorization>
+      <deny users="?"/>
+      <deny users="*"/>
+    </authorization>
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
@@ -68,6 +74,9 @@
       </providers>
     </sessionState>
   </system.web>
+  <appSettings>
+    <add key="SessionTimeout" value="30"/>
+  </appSettings>
   <system.webServer>
     <modules>
       <remove name="FormsAuthenticationModule" />
