--- a/Teaching/Web.config
+++ b/Teaching/Web.config
@@ -27,7 +27,7 @@
     </authentication>
     <authorization>
       <deny users="?"/>
-      <deny users="*"/>
+      <allow users="*"/>
     </authorization>
     <pages>
       <namespaces>
