update login function

--- a/Source/Teaching/Web.config
+++ b/Source/Teaching/Web.config
@@ -62,17 +62,17 @@
         <clear />
       </providers>
     </roleManager>
-
+    <sessionState mode="StateServer" timeout="3000" /> 
     <!--如果要部署到具有多个 Web 服务器实例的云环境，
     则应将会话状态模式从 "InProc" 更改为“自定义”。此外，
     还应将名为 "DefaultConnection" 的连接字符串更改为连接到
     SQL Server (包括 SQL Azure 和 SQL  Compact)实例，而不是连接到 SQL Server Express 实例。-->
 
-    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
+    <!--<sessionState mode="Custom" customProvider="DefaultSessionProvider">
       <providers>
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
-    </sessionState>
+    </sessionState>-->
   </system.web>
   <appSettings>
     <add key="SessionTimeout" value="30"/>
