--- a/Source/Teaching.DataAccess/Hrbu.Teaching.DataAccess.csproj
+++ b/Source/Teaching.DataAccess/Hrbu.Teaching.DataAccess.csproj
@@ -57,6 +57,7 @@
     <Compile Include="RoleContext.cs" />
     <Compile Include="StudentBasicInfoContext.cs" />
     <Compile Include="TeacherBasicInfoContext.cs" />
+    <Compile Include="UserContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
