--- a/Source/Teaching/Hrbu.Teaching.WebUI.csproj
+++ b/Source/Teaching/Hrbu.Teaching.WebUI.csproj
@@ -273,6 +273,7 @@
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Pages\Power\UserList.aspx" />
     <Content Include="Pages\Top.aspx" />
     <Content Include="Site.Master" />
     <Content Include="UserControls\PagerControl.ascx" />
@@ -519,6 +520,13 @@
     </Compile>
     <Compile Include="Pages\Power\RoleList.aspx.designer.cs">
       <DependentUpon>RoleList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Power\UserList.aspx.cs">
+      <DependentUpon>UserList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Power\UserList.aspx.designer.cs">
+      <DependentUpon>UserList.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\Top.aspx.cs">
       <DependentUpon>Top.aspx</DependentUpon>
