--- a/Source/Teaching/Web.config
+++ b/Source/Teaching/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Teaching-20131205034341.mdf;Initial Catalog=aspnet-Teaching-20131205034341;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+      <!--<add name="TCMGConnection" connectionString="metadata=res://*/Database.csdl|res://*/Database.ssdl|res://*/Database.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=jennyl-pc;Initial Catalog=TCMG;Persist Security Info=True;user id=sa;password=123;MultipleActiveResultSets=True&quot;"
+        providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <location path= "VerifyImageCode.ashx">
     <system.web>
@@ -29,7 +29,7 @@
       <deny users="?"/>
       <allow users="*"/>
     </authorization>
-    <pages>
+    <pages enableSessionState="true">
       <namespaces>
         <add namespace="System.Web.Optimization" />
         <add namespace="Microsoft.AspNet.Identity" />
@@ -62,6 +62,8 @@
         <clear />
       </providers>
     </roleManager>
+    <httpModules>
+    </httpModules>
     <sessionState mode="StateServer" timeout="3000" /> 
     <!--如果要部署到具有多个 Web 服务器实例的云环境，
     则应将会话状态模式从 "InProc" 更改为“自定义”。此外，
