--- a/Source/Teaching.DataAccess/App.config
+++ b/Source/Teaching.DataAccess/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="TCMGConnection" connectionString="metadata=res://*/Database.csdl|res://*/Database.ssdl|res://*/Database.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=local;Initial Catalog=TCMG;Persist Security Info=True;user id=sa;password=123;MultipleActiveResultSets=True&quot;"
+    <add name="TCMGConnection" connectionString="metadata=res://*/Database.csdl|res://*/Database.ssdl|res://*/Database.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=jennyl-pc;Initial Catalog=TCMG;Persist Security Info=True;user id=sa;password=123;MultipleActiveResultSets=True&quot;"
       providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
