--- a/Source/Teaching.DataAccess/Hrbu.Teaching.DataAccess.csproj
+++ b/Source/Teaching.DataAccess/Hrbu.Teaching.DataAccess.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthorizationContext.cs" />
     <Compile Include="DataDicContext.cs" />
     <Compile Include="DataDicinfoContext.cs" />
     <Compile Include="DBContext.cs" />
